# fortune-wheel-tg-bot

./: CMakeLists.txt  README.md
src/: main.cpp
src/bot/: BotCommands.hpp  BotController.cpp  BotController.hpp  CommandParser.cpp  CommandParser.hpp  SpinAnimationService.cpp  SpinAnimationService.hpp
src/domain/: DomainExceptions.hpp  Wheel.cpp  Wheel.hpp  WheelItem.hpp  WheelManager.cpp  WheelManager.hpp  WheelMode.hpp
src/http/: HttpClient.cpp  HttpClient.hpp  HttpRequest.hpp  HttpResponse.hpp
src/storage/: InMemoryStorage.cpp  InMemoryStorage.hpp  Storage.hpp  WheelStorageKey.hpp
src/telegram/: TelegramClient.cpp  TelegramClient.hpp  TelegramTypes.hpp  TelegramUpdateParser.cpp  TelegramUpdateParser.hpp
